update for new lang features